# a2ui-demo

./: .env.example  .gitignore  DESIGN.md  README.md
backend/: pyproject.toml
backend/src/a2ui_demo/: __init__.py  a2ui_contract.py  a2ui_templates.py  a2ui_v08_catalog.py  a2ui_v08_messages.py  abox_store.py  config.py  llm_form_schema.py  llm_user_input_union.py  logging_utils.py  main.py  mock_ontology_demo.py  ontology_client.py  ontology_models.py  ontology_platform_stub.py  ontology_split.py  ontology_validation.py  ui_intent.py
backend/src/a2ui_demo/flows/: __init__.py  compiler.py  loader.py  runner.py  state.py
backend/tests/: conftest.py  test_a2ui_contract.py  test_a2ui_templates.py  test_a2ui_v08_messages.py  test_abox_store.py  test_compiler.py  test_expression_eval.py  test_llm_form_schema.py  test_llm_form_schema_enrich.py  test_llm_user_input_union_intent.py  test_loader.py  test_logging_utils.py  test_main_a2ui_batch.py  test_main_ws_revision.py  test_mock_api.py  test_ontology_http.py  test_ontology_split.py  test_ontology_validation.py  test_progress_business_info.py  test_ui_intent.py
backend/tests/fixtures/: sam_credit_card_full.json
docs/: DESIGN.md
frontend/: index.html  ontology.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: a2ui-action-router.test.ts  a2ui-action-router.ts  a2ui-contract.test.ts  a2ui-contract.ts  a2ui-default-theme.test.ts  a2ui-default-theme.ts  a2ui-safe-markdown.test.ts  a2ui-safe-markdown.ts  a2ui-v08-catalog.ts  demo-app.ts  (+7 more)
ontology/: sam_credit_card.json  simple_kyc.json
(+3 files in other folders)
