[project]
name = "a2ui-demo-backend"
version = "0.1.0"
description = "LangGraph + OpenRouter + A2UI demo backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "langgraph>=0.2.76",
  "langchain-core>=0.3.29",
  "langchain-openai>=0.3.0",
  "httpx>=0.27.0",
  "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.25.0"]

[project.scripts]
a2ui-demo-serve = "a2ui_demo.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2ui_demo"]

[tool.hatch.build.targets.sdist]
include = ["src/a2ui_demo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
